# code_cli

./: .gitignore  Cargo.toml  todo.txt
model/src/: lib.rs  table.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/go/: gf.rs  hertz.rs  mod.rs  zero.rs
service/src/java/: mod.rs  mybatis.rs
service/src/rust/: actix.rs  axum.rs  ntex.rs  rocket.rs  salvo.rs
service/src/web/angular/: mod.rs  ng_zorro_antd.rs
src/: main.rs
src/model/: column.rs  db.rs  db_info.rs  mod.rs  name_mapping.rs  table.rs  type_mapping.rs
src/service/: generate.rs  mod.rs
src/service/go/: gf.rs  hertz.rs  mod.rs  zero.rs
src/service/java/: mybatis.rs
src/service/rust/: actix.rs  axum.rs  mod.rs  ntex.rs  rocket.rs  salvo.rs
src/service/web/: mod.rs
src/templates/java/: mod.rs
src/util/: db_util.rs  file_util.rs  generate_util.rs  mod.rs
templates/go/gf/: api.tpl  ctrl_add.tpl  ctrl_delete.tpl  ctrl_detail.tpl  ctrl_list.tpl  ctrl_update.tpl  ctrl_update_status.tpl  logic.tpl  model.tpl
templates/go/gorm/: entity.tpl
templates/go/hertz/: handler.tpl  proto.tpl
templates/go/zero/: api.tpl  proto.tpl
templates/java/controller/: controller.java
templates/java/dao/: dao.java
templates/java/entity/: entity.java
templates/java/mapper/: mapper.xml
templates/java/react/: data.d.ts  index.tsx  service.ts
templates/java/service/: service.java
templates/java/util/: Result.java
templates/java/vo/: req.java  resp.java
templates/java/vue/: data.d.ts  index.vue  service.ts
util/: Cargo.toml
util/src/: db_util.rs  file_util.rs  lib.rs
(+220 files in other folders)
