[package]
name = "code_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

clap = { version = "4", features = ["derive"] }
clap_derive = "4"

mysql = "23.0.1"

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

heck = "0.4.0"
