[package]
name = "code_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }

clap = { version = "4", features = ["derive"] }
clap_derive = "4"

tera = "1.17.1"
chrono = "0.4.23"

service = { path = "./service", version = "0.1.0" }
util = { path = "./util", version = "0.1.0" }
model = { path = "./model", version = "0.1.0" }
[workspace]
members = ["model", 'service', "util"]

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1